--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "cosmic-text"
 version = "0.1.0"
 authors = ["Jeremy Soller <jeremy@system76.com>"]
 edition = "2021"
-license = "MPL2"
+license = "MIT OR Apache-2.0"
 
 [dependencies]
 fontdb = "0.9"
