Revert "Switch unicode-linebreak to xi-unicode for ~25% faster builds"
This fixes ZJW emoji support.

This reverts commit c1262eca74ca01321f64bb0d2afb216e62240616.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ rustybuzz = "0.5"
 swash = "0.1"
 sys-locale = "0.2"
 unicode-bidi = "0.3"
-xi-unicode = "0.3.0"
+unicode-linebreak = "0.1"
 unicode-script = "0.5"
 
 [workspace]
