Add markdown sample

--- a/examples/editor-test/Cargo.toml
+++ b/examples/editor-test/Cargo.toml
@@ -3,7 +3,7 @@ name = "editor-test"
 version = "0.1.0"
 authors = ["Jeremy Soller <jeremy@system76.com>"]
 edition = "2021"
-license = "MPL2"
+license = "MIT OR Apache-2.0"
 publish = false
 
 [dependencies]
