--- a/examples/markdown/Cargo.toml
+++ b/examples/markdown/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "editor-orbclient"
+name = "markdown"
 version = "0.1.0"
 authors = ["Jeremy Soller <jeremy@system76.com>"]
 edition = "2021"
@@ -11,7 +11,5 @@ cosmic-text = { path = "../../" }
 env_logger = "0.9"
 fontdb = "0.9"
 log = "0.4"
-orbclient = "0.3.39"
-
-[features]
-mono = []
+minimad = "0.9"
+orbclient = "0.3.35"
