--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ license = "MIT OR Apache-2.0"
 [dependencies]
 fontdb = "0.9.3"
 log = "0.4"
+ouroboros = "0.15.5"
 rustybuzz = "0.5"
 swash = { version = "0.1", optional = true }
 sys-locale = "0.2"
