--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ log = "0.4"
 ouroboros = "0.15.5"
 rustybuzz = { version = "0.5", default-features = false, features = ["libm"]}
 swash = { version = "0.1", optional = true }
+syntect = { version = "5.0", optional = true }
 sys-locale = { version = "0.2", optional = true }
 unicode-linebreak = "0.1"
 unicode-script = "0.5"
