--- a/examples/editor-libcosmic/Cargo.toml
+++ b/examples/editor-libcosmic/Cargo.toml
@@ -7,7 +7,7 @@ license = "MIT OR Apache-2.0"
 publish = false
 
 [dependencies]
-cosmic-text = { path = "../../" }
+cosmic-text = { path = "../../", features = ["syntect"] }
 env_logger = "0.9"
 fontdb = "0.9"
 lazy_static = "1.4"
