--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,5 +14,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+    - uses: actions-rs/clippy-check@v1
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        args: --all-features
     - name: Run Rust CI
       run: ./ci.sh
