Add vi feature to enable vi-style editor

--- a/examples/editor-libcosmic/Cargo.toml
+++ b/examples/editor-libcosmic/Cargo.toml
@@ -23,3 +23,7 @@ version = "0.10"
 #TODO: iced portal
 #default-features = false
 #features = ["xdg-portal"]
+
+[features]
+default = []
+vi = ["cosmic-text/vi"]
