--- a/examples/editor-orbclient/Cargo.toml
+++ b/examples/editor-orbclient/Cargo.toml
@@ -13,3 +13,7 @@ fontdb = "0.9"
 log = "0.4"
 orbclient = "0.3.35"
 unicode-segmentation = "1.7"
+
+[features]
+default = []
+vi = ["cosmic-text/vi"]
