--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "cosmic-text"
 description = "Pure Rust multi-line text handling"
-version = "0.4.1"
+version = "0.5.0-alpha1"
 authors = ["Jeremy Soller <jeremy@system76.com>"]
 edition = "2021"
 license = "MIT OR Apache-2.0"
@@ -39,6 +39,7 @@ std = [
   "sys-locale",
   "unicode-bidi/std",
 ]
+vi = ["syntect"]
 
 [workspace]
 members = [
