Replace use of `str::lines` with `unicode-bidi`

--- a/examples/editor-test/Cargo.toml
+++ b/examples/editor-test/Cargo.toml
@@ -13,3 +13,8 @@ fontdb = "0.13"
 log = "0.4"
 orbclient = "0.3.35"
 unicode-segmentation = "1.7"
+
+[dependencies.unicode-bidi]
+version = "0.3.8"
+default-features = false
+features = ["hardcoded-data"]
