--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,10 @@ std = [
 ]
 vi = ["syntect"]
 
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docsrs"]
+
 [workspace]
 members = [
   "examples/*",
