--- a/examples/editor-libcosmic/Cargo.toml
+++ b/examples/editor-libcosmic/Cargo.toml
@@ -15,7 +15,7 @@ log = "0.4"
 
 [dependencies.libcosmic]
 git = "https://github.com/pop-os/libcosmic"
-rev = "24709e9c3b56c49a0af168d1e37ebef85f112c8a"
+branch = "scale-factor"
 default-features = false
 features = ["winit_softbuffer"]
 #path = "../../../libcosmic"
