--- a/examples/editor-libcosmic/Cargo.toml
+++ b/examples/editor-libcosmic/Cargo.toml
@@ -15,7 +15,7 @@ log = "0.4"
 
 [dependencies.libcosmic]
 git = "https://github.com/pop-os/libcosmic"
-branch = "scale-factor"
+rev = "f0ab457"
 default-features = false
 features = ["winit_softbuffer"]
 #path = "../../../libcosmic"
