--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ ouroboros = { version = "0.15.5", default-features = false }
 rustybuzz = { version = "0.7.0", default-features = false, features = ["libm"] }
 swash = { version = "0.1.6", optional = true }
 syntect = { version = "5.0.0", optional = true }
-sys-locale = { version = "0.2.3", optional = true }
+sys-locale = { version = "0.3.0", optional = true }
 unicode-linebreak = "0.1.4"
 unicode-script = "0.5.5"
 unicode-segmentation = "1.10.0"
@@ -41,6 +41,7 @@ std = [
   "unicode-bidi/std",
 ]
 vi = ["syntect"]
+wasm-web = ["sys-locale?/js"]
 
 [workspace]
 members = [
