--- a/examples/terminal/Cargo.toml
+++ b/examples/terminal/Cargo.toml
@@ -7,8 +7,8 @@ license = "MIT OR Apache-2.0"
 publish = false
 
 [dependencies]
+colored = "2.0"
 cosmic-text = { path = "../../" }
 env_logger = "0.10"
 fontdb = "0.13"
 log = "0.4"
-termion = "2.0"
