Adapt examples to be recognised as such by Cargo
Currently examples are binary modules inside the workspace. As a result,
these are not treated as examples by cargo, e.g.:

    > cargo run --example
    error: "--example" takes one argument.
    No examples available.

This patch moves files around a bit so that examples are actually
recognised as such by cargo. This has a few effects:

* `cargo test` will ensure that they compile.
* They will share the lock file with the main project. This ensure that
  their dependencies are aligned and avoids potentially downloading and
  compiling multiple different versions of the same dependency.
* `cargo run --example` provides useful output:

    > cargo run --example
    error: "--example" takes one argument.
    Available examples:
        editor-libcosmic
        editor-orbclient
        editor-test
        rich-text
        terminal

Depending on the shell's setup, shell completion may also be available
when using `cargo run --example`.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,27 @@ version = "0.3.8"
 default-features = false
 features = ["hardcoded-data"]
 
+[dev-dependencies]
+env_logger = "0.10"
+lazy_static = "1.4"
+log = "0.4"
+orbclient = "0.3.35"
+unicode-segmentation = "1.7"
+termion = "2.0"
+
+[dev-dependencies.rfd]
+version = "0.11"
+#TODO: iced portal
+#default-features = false
+#features = ["xdg-portal"]
+
+[dev-dependencies.libcosmic]
+git = "https://github.com/pop-os/libcosmic"
+rev = "035ec88"
+default-features = false
+features = ["winit_softbuffer"]
+#path = "../libcosmic"
+
 [features]
 default = ["std", "swash"]
 no_std = [
@@ -42,7 +63,6 @@ std = [
 vi = ["syntect"]
 wasm-web = ["sys-locale?/js"]
 
-[workspace]
-members = [
-  "examples/*",
-]
+[[example]]
+name = "editor-libcosmic"
+required-features = ["syntect"]
