--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ unicode-linebreak = "0.1.4"
 unicode-script = "0.5.5"
 unicode-segmentation = "1.10.0"
 rangemap = "1.2.0"
-hashbrown = { version = "0.14.0", default-features = false }
+hashbrown = { version = "0.14.0", optional = true, default-features = false }
 rustc-hash = { version = "1.1.0", default-features = false }
 
 [dependencies.unicode-bidi]
@@ -33,6 +33,7 @@ features = ["hardcoded-data"]
 default = ["std", "swash"]
 no_std = [
   "rustybuzz/libm",
+  "hashbrown",
 ]
 std = [
   "fontdb/memmap",
