--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,6 @@ rust-version = "1.65"
 fontdb = { version = "0.14.1", default-features = false }
 libm = "0.2.7"
 log = "0.4.20"
-aliasable = "0.1.3"
 rustybuzz = { version = "0.10.0", default-features = false, features = ["libm"] }
 swash = { version = "0.1.8", optional = true }
 syntect = { version = "5.1.0", optional = true }
@@ -24,6 +23,7 @@ unicode-segmentation = "1.10.1"
 rangemap = "1.3.0"
 hashbrown = { version = "0.14.0", optional = true, default-features = false }
 rustc-hash = { version = "1.1.0", default-features = false }
+self_cell = "1.0.1"
 
 [dependencies.unicode-bidi]
 version = "0.3.13"
