Add image render tests
Add tests that will match rendered words/paragraphs against reference
images.

Use env var `GENERATE_IMAGES` to write the initial reference images to
the repository.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,7 @@ harness = false
 members = ["examples/*"]
 
 [dev-dependencies]
+tiny-skia = "0.11"
 criterion = { version = "0.5.1", default-features = false, features = [
     "cargo_bench_support",
 ] }
