--- a/deny.toml
+++ b/deny.toml
@@ -103,7 +103,8 @@ allow = [
     "MIT",
     "Apache-2.0",
     "Unicode-DFS-2016",
-    #"BSD-2-Clause",
+    "BSD-3-Clause",
+    "BSD-2-Clause",
     "Zlib",
     #"Apache-2.0 WITH LLVM-exception",
 ]
