--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,12 @@ unicode-linebreak = "0.1.5"
 unicode-script = "0.5.5"
 unicode-segmentation = "1.10.1"
 
+#TODO: crates release
+[dependencies.modit]
+git = "https://github.com/pop-os/modit.git"
+optional = true
+#path = "../modit"
+
 [dependencies.unicode-bidi]
 version = "0.3.13"
 default-features = false
@@ -41,7 +47,7 @@ std = [
     "sys-locale",
     "unicode-bidi/std",
 ]
-vi = ["syntect"]
+vi = ["modit", "syntect"]
 wasm-web = ["sys-locale?/js"]
 warn_on_missing_glyphs = []
 fontconfig = ["fontdb/fontconfig", "std"]
