--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ self_cell = "1.0.1"
 swash = { version = "0.1.8", optional = true }
 syntect = { version = "5.1.0", optional = true }
 sys-locale = { version = "0.3.1", optional = true }
+undo_2 = { version = "0.2.0", optional = true }
 unicode-linebreak = "0.1.5"
 unicode-script = "0.5.5"
 unicode-segmentation = "1.10.1"
@@ -46,7 +47,7 @@ std = [
     "sys-locale",
     "unicode-bidi/std",
 ]
-vi = ["modit", "syntect"]
+vi = ["modit", "syntect", "undo_2"]
 wasm-web = ["sys-locale?/js"]
 warn_on_missing_glyphs = []
 fontconfig = ["fontdb/fontconfig", "std"]
