--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ repository = "https://github.com/pop-os/cosmic-text"
 rust-version = "1.65"
 
 [dependencies]
+cosmic_undo_2 = { version = "0.2.0", optional = true }
 fontdb = { version = "0.15.0", default-features = false }
 hashbrown = { version = "0.14.1", optional = true, default-features = false }
 libm = "0.2.8"
@@ -21,7 +22,6 @@ self_cell = "1.0.1"
 swash = { version = "0.1.8", optional = true }
 syntect = { version = "5.1.0", optional = true }
 sys-locale = { version = "0.3.1", optional = true }
-undo_2 = { version = "0.2.0", optional = true }
 unicode-linebreak = "0.1.5"
 unicode-script = "0.5.5"
 unicode-segmentation = "1.10.1"
@@ -47,7 +47,7 @@ std = [
     "sys-locale",
     "unicode-bidi/std",
 ]
-vi = ["modit", "syntect", "undo_2"]
+vi = ["modit", "syntect", "cosmic_undo_2"]
 wasm-web = ["sys-locale?/js"]
 warn_on_missing_glyphs = []
 fontconfig = ["fontdb/fontconfig", "std"]
