--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ fontdb = { version = "0.16.0", default-features = false }
 hashbrown = { version = "0.14.1", optional = true, default-features = false }
 libm = "0.2.8"
 log = "0.4.20"
+modit = { version = "0.1.0", optional = true }
 rangemap = "1.4.0"
 rustc-hash = { version = "1.1.0", default-features = false }
 rustybuzz = { version = "0.11.0", default-features = false, features = ["libm"] }
@@ -25,12 +26,6 @@ sys-locale = { version = "0.3.1", optional = true }
 unicode-linebreak = "0.1.5"
 unicode-script = "0.5.5"
 unicode-segmentation = "1.10.1"
-
-#TODO: crates release
-[dependencies.modit]
-git = "https://github.com/pop-os/modit.git"
-optional = true
-#path = "../modit"
 
 [dependencies.unicode-bidi]
 version = "0.3.13"
