--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ rangemap = "1.4.0"
 rustc-hash = { version = "1.1.0", default-features = false }
 rustybuzz = { version = "0.12.0", default-features = false, features = ["libm"] }
 self_cell = "1.0.1"
+serde = { version = "1.0.196", features = ["derive"], optional = true, default-features = false }
 swash = { version = "0.1.12", optional = true }
 syntect = { version = "5.1.0", optional = true }
 sys-locale = { version = "0.3.1", optional = true }
@@ -48,6 +49,7 @@ vi = ["modit", "syntect", "cosmic_undo_2"]
 wasm-web = ["sys-locale?/js"]
 warn_on_missing_glyphs = []
 fontconfig = ["fontdb/fontconfig", "std"]
+serde = ["dep:serde", "fontdb/serde", "rangemap/serde1", "bitflags/serde"]
 
 [[bench]]
 name = "layout"
