Add optional std feature to serde feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ std = [
     "rustybuzz/std",
     "sys-locale",
     "unicode-bidi/std",
+    "serde?/std"
 ]
 vi = ["modit", "syntect", "cosmic_undo_2"]
 wasm-web = ["sys-locale?/js"]
