--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ rust-version = "1.65"
 [dependencies]
 bitflags = "2.4.1"
 cosmic_undo_2 = { version = "0.2.0", optional = true }
-fontdb = { version = "0.16.0", default-features = false }
+fontdb = { version = "0.16.0", default-features = false, git = "https://github.com/StratusFearMe21/fontdb", branch = "serde" }
 hashbrown = { version = "0.14.1", optional = true, default-features = false }
 libm = "0.2.8"
 log = "0.4.20"
