--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ self_cell = "1.0.1"
 swash = { version = "0.1.12", optional = true }
 syntect = { version = "5.1.0", optional = true }
 sys-locale = { version = "0.3.1", optional = true }
-ttf-parser = "0.20.0"
+ttf-parser = { version = "0.20.0", default-features = false }
 unicode-linebreak = "0.1.5"
 unicode-script = "0.5.5"
 unicode-segmentation = "1.10.1"
@@ -44,6 +44,7 @@ std = [
     "fontdb/std",
     "rustybuzz/std",
     "sys-locale",
+    "ttf-parser/std",
     "unicode-bidi/std",
 ]
 vi = ["modit", "syntect", "cosmic_undo_2"]
