--- a/examples/editor/Cargo.toml
+++ b/examples/editor/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "editor-orbclient"
+name = "editor"
 version = "0.1.0"
 authors = ["Jeremy Soller <jeremy@system76.com>"]
 edition = "2021"
@@ -11,8 +11,10 @@ cosmic-text = { path = "../..", features = ["syntect"] }
 env_logger = "0.10"
 fontdb = "0.13"
 log = "0.4"
-orbclient = "0.3.35"
+softbuffer = "0.4"
+tiny-skia = "0.11"
 unicode-segmentation = "1.7"
+winit = "0.29"
 
 [features]
 default = []
