--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ modit = { version = "0.1.4", optional = true }
 rangemap = "1.4.0"
 rustc-hash = { version = "1.1.0", default-features = false }
 rustybuzz = { version = "0.12.0", default-features = false, features = ["libm"] }
+itertools = "0.11.0"
 self_cell = "1.0.1"
 swash = { version = "0.1.12", optional = true }
 syntect = { version = "5.1.0", optional = true }
