--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ ttf-parser = { version = "0.20.0", default-features = false }
 unicode-linebreak = "0.1.5"
 unicode-script = "0.5.5"
 unicode-segmentation = "1.10.1"
+rayon = { version = "1", optional = true }
 
 [dependencies.unicode-bidi]
 version = "0.3.13"
@@ -35,7 +36,7 @@ default-features = false
 features = ["hardcoded-data"]
 
 [features]
-default = ["std", "swash", "fontconfig"]
+default = ["std", "swash", "fontconfig", "rayon"]
 fontconfig = ["fontdb/fontconfig", "std"]
 no_std = ["rustybuzz/libm", "hashbrown"]
 shape-run-cache = []
@@ -50,6 +51,7 @@ std = [
 vi = ["modit", "syntect", "cosmic_undo_2"]
 wasm-web = ["sys-locale?/js"]
 warn_on_missing_glyphs = []
+rayon = ["dep:rayon"]
 
 [[bench]]
 name = "layout"
