--- a/deny.toml
+++ b/deny.toml
@@ -236,7 +236,8 @@ deny = [
 
 # Certain crates/versions that will be skipped when doing duplicate detection.
 skip = [
-    { name = "bitflags" }
+    { name = "bitflags" },
+    { name = "syn" },
     #{ name = "ansi_term", version = "=0.11.0" },
 ]
 # Similarly to `skip` allows you to skip certain crates during duplicate
