--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ unicode-linebreak = "0.1.5"
 unicode-script = "0.5.5"
 unicode-segmentation = "1.10.1"
 rayon = { version = "1", optional = true }
+emojis = "0.6.2"
 
 [dependencies.unicode-bidi]
 version = "0.3.13"
