--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -19,3 +19,4 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./target/doc
+        force_orphan: true
