--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ unicode-script = "0.5.5"
 unicode-segmentation = "1.10.1"
 rayon = { version = "1", optional = true }
 emojis = "0.6.2"
+ordered-float = "4.2.1"
 
 [dependencies.unicode-bidi]
 version = "0.3.13"
