Deep-check for monospacity
 Before this change, a font is considered monospace if `fontdb` flags it
 as such. `fontdb` checks the `post` table for this property.

 But some fonts don't set that property there.

 Most notably, "Noto Sans Mono" is among these fonts. Monospace as
 a property is said to be communicated in other places like `OS/2`'s
 `panose`, but that's not set in the Noto font either.

 Loosely based on a `fontconfig` function called
 `FcFreeTypeSpacing()`, this commit adds an additional check against
 fonts that are not set as `monospaced` by `fontdb`. The horizontal
 advances of all glyphs of a cmap unicode table are checked to see
 if they are monospace. Proportionality with double-width and
 treble-width advances is taken into consideration. Treble width
 advances exist in the aforementioned Noto font.

 The checks should be efficient, but the overhead is not in the noise.
 So these extra checks are only run if the "monospace_fallback" crate
 feature is enabled.

 This change also requires library users to check monospacity with
 `FontSystem::is_monospace()` instead of `FaceInfo::monospaced` from
 `fontdb` to be in-sync with cosmic-text's view. This requirement was
 probably coming in the future anyway for when cosmic-text adds support
 for variable fonts.

Signed-off-by: Mohammad AlSaleh <CE.Mohammad.AlSaleh@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ smol_str = { version = "0.2.2", default-features = false }
 swash = { version = "0.1.17", optional = true }
 syntect = { version = "5.1.0", optional = true }
 sys-locale = { version = "0.3.1", optional = true }
-ttf-parser = { version = "0.21", default-features = false }
+ttf-parser = { version = "0.25", default-features = false, features = [ "opentype-layout" ] }
 unicode-linebreak = "0.1.5"
 unicode-script = "0.5.5"
 unicode-segmentation = "1.10.1"
@@ -40,7 +40,7 @@ features = ["hardcoded-data"]
 default = ["std", "swash", "fontconfig"]
 fontconfig = ["fontdb/fontconfig", "std"]
 monospace_fallback = []
-no_std = ["rustybuzz/libm", "hashbrown", "dep:libm"]
+no_std = ["rustybuzz/libm", "ttf-parser/no-std-float", "hashbrown", "dep:libm"]
 shape-run-cache = []
 std = [
     "fontdb/memmap",
@@ -73,3 +73,6 @@ opt-level = 1
 
 [package.metadata.docs.rs]
 features = ["vi"]
+
+[patch.crates-io]
+ttf-parser = { git = "https://github.com/MoSal/ttf-parser", branch = "codepoints_iter" }
