--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,6 @@ rustc-hash = { version = "1.1.0", default-features = false }
 rustybuzz = { version = "0.14", default-features = false, features = ["libm"] }
 self_cell = "1.0.1"
 smol_str = { version = "0.2.2", default-features = false }
-swash = { version = "0.1.17", optional = true }
 syntect = { version = "5.1.0", optional = true }
 sys-locale = { version = "0.3.1", optional = true }
 ttf-parser = { version = "0.21", default-features = false }
@@ -30,6 +29,12 @@ unicode-linebreak = "0.1.5"
 unicode-script = "0.5.5"
 unicode-segmentation = "1.10.1"
 rayon = { version = "1", optional = true }
+
+[dependencies.swash]
+version = "0.2.0"
+default-features = false
+features = ["render", "scale"]
+optional = true
 
 [dependencies.unicode-bidi]
 version = "0.3.13"
@@ -46,6 +51,7 @@ std = [
     "fontdb/memmap",
     "fontdb/std",
     "rustybuzz/std",
+    "swash?/std",
     "sys-locale",
     "ttf-parser/std",
     "unicode-bidi/std",
