Optimize BidiParagraphs with ASCII fast path - Added fast path for ASCII text that avoids BidiInfo allocation - Added some text shaping benchmarks

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,6 +68,10 @@ warn_on_missing_glyphs = []
 name = "layout"
 harness = false
 
+[[bench]]
+name = "text_shaping_benchmarks"
+harness = false
+
 [workspace]
 members = ["examples/*"]
 
