Use Parley with faster line height computation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -79,7 +79,7 @@ tiny-skia = "0.11.2"
 criterion = { version = "0.5.1", default-features = false, features = [
     "cargo_bench_support",
 ] }
-parley = "0.6.0"
+parley = { git = "https://github.com/linebender/parley", rev = "3630c6bf9a4117fb1d0a6525abcdcf43557d3925" }
 linebender_resource_handle = "0.1.0"
 
 [profile.test]
